--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
   <head>
     <link rel="stylesheet" href="style.css" />
     <title>My Personal Website</title></head>
-  <body><h1>Hello World!</h1></body>
+  <body>
+    <h1>Hello World!</h1>
+    <script src="script.js"></script>
+  </body>
 </html>
