--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="style.css" />
-    <title>My Personal Website</title></head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css" >
+    <title>Emily Harbeck</title>
+  </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Emily Harbeck</h1>
+    <h2>Software Engineering Student</h2>
     <script src="script.js"></script>
   </body>
 </html>
