added div, class, image

--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
     <title>Emily Harbeck</title>
   </head>
   <body>
-    <h1>Emily Harbeck</h1>
-    <h2>Software Engineering Student</h2>
+    <div class="wrapper">
+        <div class="left">
+            <img class="profile-picture" src="profilepic.jpeg" width="200" 
+            alt="Emily Harbeck">
+            <h1 class="name">Emily Harbeck</h1>
+            <h4 class="subtitle">Software Engineering Student</h4>
+        </div>
+        <div class="right">
+            <p class="bio">
+                Currently studying Software Engineering through Academy Xi. My previous background includes a Diploma in Systems Technology as well as having my MCP in Microsoft XP systems.
+            </p>
+            <ul class="social-links">
+                <li><a href="https://github.com/emilyharbeck">Github</a></li>
+            </ul>
+        </div>
     <script src="script.js"></script>
-  </body>
+</body>
+
 </html>
