--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="https://github.com/emilyharbeck">Github</a></li>
             </ul>
         </div>
+    </div>
     <script src="script.js"></script>
-</body>
-
+    </body>
 </html>
