added skills,experience, project sections to body,added resume link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   </head>
   <body>
-    <header class="intro">
+        <header class="intro">
                 <h1 class="intro_welcome">
                     Welcome!
                 </h1>
@@ -27,7 +27,7 @@
                         <a href="mailto:eharbeck@me.com" target="_blank" class="highlight-link">eharbeck@me.com</a>
                     </span>
                 </h3>
-            </header>
+        </header>
             <section class="section background">
                 <div class="section_title">Background</div>
                 <div class="section_content">
@@ -82,12 +82,11 @@
                             <div class="job_position">Student</div>
                         </div>
                     </div>
-                    <a href="" target="_blank" class="arrow-link">View My Resume</a>
+                    <a href="resume.pdf" target="_blank" class="arrow-link">View My Resume</a>
                 </div>
             </section>
             <section class="section projects">
                 <div class="secton_title">Projects</div>
             </section>
-        </div>
     </body>
 </html>
