added emoji to html

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <body>
         <header class="intro">
                 <h1 class="intro_welcome">
-                    Welcome!
+                    Welcome! &#128075;
                 </h1>
                 <h2 class="intro_tagline">
                     I'm <span class="name">Emily Harbeck</span>
-                    , a current Software Engineering student at Acadaemy Xi <span class="emoji technologist"></span>
+                    , a current Software Engineering student at Acadaemy Xi
                 </h2>
                 <h3 class="intro_contact">
-                    <span>Get in touch</span>
+                    <span>Get in touch &#128073;</span>
                     <span>
                         <a href="mailto:eharbeck@me.com" target="_blank" class="highlight-link">eharbeck@me.com</a>
                     </span>
